--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
           tags=($(git tag -l --sort=-version:refname))
           current_tag=${tags[0]}
           previous_tag=${tags[1]}
-          echo "::set-output name=current_tag::$current_tag"
-          echo "::set-output name=previous_tag::$previous_tag"
+          echo "previous_tag=$previous_tag" >> $GITHUB_OUTPUT
+          echo "current_tag=$current_tag" >> $GITHUB_OUTPUT
 
       - name: 提取并分类提交消息
         id: extract_commit_messages
@@ -38,15 +38,42 @@ jobs:
           else
             commit_messages=$(git log --pretty=format:"%s - by @%an (%h)" "$previous_tag".."$current_tag" | grep -E 'feat|fix|docs|perf')
           fi
-          feat_messages=$(echo "$commit_messages" | grep 'feat' || true)
-          fix_messages=$(echo "$commit_messages" | grep 'fix' || true)
-          docs_messages=$(echo "$commit_messages" | grep 'docs' || true)
-          perf_messages=$(echo "$commit_messages" | grep 'perf' || true)
-          echo "::set-output name=feat_messages::${feat_messages[@]}"
-          echo "::set-output name=fix_messages::${fix_messages[@]}"
-          echo "::set-output name=docs_messages::${docs_messages[@]}"
-          echo "::set-output name=perf_messages::${perf_messages[@]}"
+          # feat_messages=$(echo "$commit_messages" | grep 'feat' || true)
+          # fix_messages=$(echo "$commit_messages" | grep 'fix' || true)
+          # docs_messages=$(echo "$commit_messages" | grep 'docs' || true)
+          # perf_messages=$(echo "$commit_messages" | grep 'perf' || true)
 
+          # feat_messages=("${feat_messages[@]//\`/\\\`}")
+          # fix_messages=("${fix_messages[@]//\`/\\\`}")
+          # docs_messages=("${docs_messages[@]//\`/\\\`}")
+          # perf_messages=("${perf_messages[@]//\`/\\\`}")
+
+          # echo "feat_messages=(${feat_messages[@]})" >> $GITHUB_OUTPUT
+          # echo "fix_messages=(${fix_messages[@]})" >> $GITHUB_OUTPUT
+          # echo "docs_messages=(${docs_messages[@]})" >> $GITHUB_OUTPUT
+          # echo "perf_messages=(${perf_messages[@]})" >> $GITHUB_OUTPUT
+          
+          {
+            echo 'feat_messages<<EOF'
+            echo "$commit_messages" | grep 'feat' || true
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
+          {
+            echo 'fix_messages<<EOF'
+            echo "$commit_messages" | grep 'fix' || true
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
+          {
+            echo 'docs_messages<<EOF'
+            echo "$commit_messages" | grep 'docs' || true
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
+          {
+            echo 'perf_messages<<EOF'
+            echo "$commit_messages" | grep 'perf' || true
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
+          
       - name: 获取当前分支名
         id: get_branch_name
         run: |
@@ -89,7 +116,7 @@ jobs:
               release_notes="$release_notes\n- $message"
             done
           fi
-          echo "::set-output name=release_notes::$release_notes"
+          echo "release_notes=$release_notes" >> $GITHUB_OUTPUT
 
       - name: 写入生成的发布说明到 changelog.md
         run: |
