--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "prepublishOnly": "npm run build",
     "prepare": "simple-git-hooks",
     "lint": "eslint . --fix",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "example:dev:h5": "npm -C examples run dev",
+    "example:build:h5": "npm -C examples run build",
+    "example:dev:mp-weixin": "npm -C examples run dev:mp-weixin",
+    "example:build:mp-weixin": "npm -C examples run build:mp-weixin"
   },
   "peerDependencies": {
     "rollup": ">=4.0.0",
