--- a/examples/package.json
+++ b/examples/package.json
@@ -20,6 +20,6 @@
     "@dcloudio/uni-automator": "3.0.0-4020820240925001",
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020820240925001",
-    "vite": "5.2.8"
+    "@uni-ku/bundle-optimizer": "workspace:*"
   }
 }
