🏀 examples: 完善示例项目，更新页面结构和配置

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -16,5 +16,12 @@
     "sourceMap": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "async-import.d.ts",
+    "async-component.d.ts",
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ]
 }
