chore: 🏡 修正示例项目构建工作流，构建项目之前先构建插件库

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Build Library
+        run: pnpm run build
+
       - name: Build Project
         run: pnpm run example:build:h5
 
