--- a/package.json
+++ b/package.json
@@ -54,15 +54,13 @@
   },
   "peerDependencies": {
     "rollup": ">=4.0.0",
-    "typescript": ">=5.5.0",
     "vite": ">=5.0.0"
   },
   "dependencies": {
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
     "@node-rs/xxhash": "^1.7.6",
     "magic-string": "^0.30.17",
-    "minimatch": "^9.0.5",
-    "typescript": "^5.5.0"
+    "minimatch": "^9.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.0",
