--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,17 @@
 {
-  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
+
   "editor.quickSuggestions": {
     "strings": "on"
   },
   "editor.formatOnSave": false,
   "eslint.useFlatConfig": true,
-  "eslint.validate": [
-    "svelte",
-    "astro",
-    "html",
-    "css",
-    "less",
-    "scss",
-    "json",
-    "jsonc",
-    "yaml",
-    "yml",
-    "markdown",
-    "toml"
-  ],
+
   "yaml.schemas": {
-    "schema\\commitlint-with-cz.json": ".commitlintrc.yaml"
+    "schema/commitlint-with-cz.json": ".commitlintrc.yaml"
   }
 }
