--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "dependencies": {
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
     "@node-rs/xxhash": "^1.7.6",
-    "chalk": "^5.4.1",
+    "chalk": "4.1.2",
     "magic-string": "^0.30.17",
     "minimatch": "^9.0.5"
   },
