--- a/examples/vue3+vite+ts/package.json
+++ b/examples/vue3+vite+ts/package.json
@@ -13,6 +13,7 @@
     "@dcloudio/uni-components": "3.0.0-4020820240925001",
     "@dcloudio/uni-h5": "3.0.0-4020820240925001",
     "@dcloudio/uni-mp-weixin": "3.0.0-4020820240925001",
+    "@https-enable/colors": "^0.1.1",
     "lodash": "^4.17.21",
     "vue": "3.4.21"
   },
@@ -21,6 +22,7 @@
     "@dcloudio/uni-automator": "3.0.0-4020820240925001",
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020820240925001",
+    "@https-enable/types": "^0.1.1",
     "@types/lodash": "^4.17.13",
     "@uni-ku/bundle-optimizer": "workspace:*"
   }
