--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uni-ku/bundle-optimizer",
   "type": "module",
-  "version": "1.2.7-beta.1",
+  "version": "1.3.0",
   "description": "uni-app 分包优化插件化实现",
   "author": {
     "name": "Vanisper",
