--- a/examples/hbx+vue3/package.json
+++ b/examples/hbx+vue3/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "catalog:"
   },
   "devDependencies": {
     "@uni-ku/bundle-optimizer": "workspace:*"
