--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,18 @@
 packages:
   - 'examples/*'
+
+catalog:
+  lodash: "^4.17.21"
+  "@types/lodash": "^4.17.13"
+
+catalogs:
+  uniapp:
+    "@dcloudio/types": 3.4.14
+    "@dcloudio/uni-app": 3.0.0-4060620250520001
+    "@dcloudio/uni-components": 3.0.0-4060620250520001
+    "@dcloudio/uni-h5": 3.0.0-4060620250520001
+    "@dcloudio/uni-mp-weixin": 3.0.0-4060620250520001
+    "@dcloudio/uni-automator": 3.0.0-4060620250520001
+    "@dcloudio/uni-cli-shared": 3.0.0-4060620250520001
+    "@dcloudio/vite-plugin-uni": 3.0.0-4060620250520001
+    vue: 3.4.21
