--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "@node-rs/xxhash": "^1.7.6",
     "chalk": "4.1.2",
     "magic-string": "^0.30.17",
-    "minimatch": "^9.0.5"
+    "minimatch": "^9.0.5",
+    "query-string": "^9.2.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
