feat(utils): add Vue SFC parsing utilities and AST manipulation functions
- Introduced `getDefaultExports` and `serializeObjectExpression` functions for AST manipulation.
- Added `parseSFC` function to parse Vue Single File Components (SFC).

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,12 @@
 packages:
   - 'examples/*'
 
+defines:
+  - &vue ^3.5.26
+
 catalog:
+  '@vue/compiler-sfc': *vue
+  '@vue/shared': *vue
   lodash: ^4.17.21
   '@types/lodash': ^4.17.13
 
