--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "dependencies": {
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
     "@node-rs/xxhash": "^1.7.6",
+    "@vue/compiler-sfc": "catalog:",
+    "ast-kit": "^2.2.0",
     "chalk": "4.1.2",
     "magic-string": "^0.30.17",
     "minimatch": "^9.0.5",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
+    "@babel/types": "^7.28.4",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^22.10.2",
