--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/index.d.mts",
   "files": [
     "dist"
   ],
@@ -40,8 +40,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "release": "npm run build && bumpp",
     "prepublishOnly": "npm run build",
     "prepare": "simple-git-hooks && npm run build",
@@ -57,12 +57,9 @@
   },
   "dependencies": {
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
-    "@node-rs/xxhash": "^1.7.6",
     "@vue/compiler-sfc": "catalog:",
     "ast-kit": "^2.2.0",
     "chalk": "4.1.2",
-    "magic-string": "^0.30.17",
-    "minimatch": "^9.0.5",
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
@@ -79,8 +76,8 @@
     "jiti": "^2.4.2",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.1",
+    "tsdown": "^0.18.1",
     "typescript": "^5.7.3",
-    "unbuild": "^2.0.0",
     "vite": "^4.0.0"
   },
   "simple-git-hooks": {
