--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,7 @@ packages:
 
 catalog:
   '@types/lodash': ^4.17.13
-  '@vue/compiler-sfc': ^3.5.26
-  '@vue/shared': ^3.5.26
+  '@vue/compiler-sfc': 3.4.21
   lodash: ^4.17.21
 
 catalogs:
@@ -18,9 +17,6 @@ catalogs:
     '@dcloudio/uni-mp-weixin': 3.0.0-4060620250520001
     '@dcloudio/vite-plugin-uni': 3.0.0-4060620250520001
     vue: 3.4.21
-
-defines:
-  - ^3.5.26
 
 ignoredBuiltDependencies:
   - core-js
