feat(types): 添加 vue 组件配置类型标注
- 拓展 vue 组件自定义配置 ComponentCustomOptions
- 三斜线方式引入类型：`/// <reference types="@uni-ku/bundle-optimizer/client" />`
- tsconfig 中引入类型标注：`compilerOptions.types` 配置下添加 `@uni-ku/bundle-optimizer/client`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"],
+  "include": ["src/**/*.ts", "client.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.js"]
 }
