--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
+    },
+    "./client": {
+      "types": "./client.d.ts"
     }
   },
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.mts",
   "files": [
+    "client.d.ts",
     "dist"
   ],
   "publishConfig": {
@@ -53,7 +57,8 @@
     "example1:build:mp-weixin": "npm -C examples/vue3+vite+ts run build:mp-weixin"
   },
   "peerDependencies": {
-    "vite": "^4.0.0 || ^5.0.0"
+    "vite": "^4.0.0 || ^5.0.0",
+    "vue": "^3.0.0"
   },
   "dependencies": {
     "@dcloudio/uni-cli-shared": "3.0.0-4020820240925001",
